--- a/面试/100道前端优质面试题/1.数据结构和算法.md
+++ b/面试/100道前端优质面试题/1.数据结构和算法.md
@@ -1090,31 +1090,169 @@ interface ITreeNode {
 
 ## 8.3二叉树的遍历
 
-- 前序遍历：root -> left -> right
-- 中序遍历：left -> root -> right
-- 后序遍历：left -> right -> root
+- 前序遍历：**root** -> left -> right
+- 中序遍历：left -> **root** -> right
+- 后序遍历：left -> right -> **root**
 
 ## 8.4二叉搜索树 BST
 
 - 左节点（包括其后代） <= 根节点
 - 右节点（包括其后代） >= 根节点 
 
-思考：BST 存在的意义是什么？—— 后面解释
-
 ## 8.5分析题目
 
-根据 BST 的特点，中序遍历的结果，正好是按照从小到大排序的结果。<br>
-所以，中序遍历，求数组的 `arr[k]` 即可。
+根据 BST 的特点，中序遍历的结果，正好是按照从小到大排序的结果。所以，中序遍历，求数组的 `arr[k]` 即可。
 
 ## 8.6代码实现
 
 ```typescript
-// binary-search-tree-k-value.ts
+// binary-search-tree.ts
+export interface ITreeNode {
+    value: number
+    left: ITreeNode | null
+    right: ITreeNode | null
+}
+
+const arr: number[] = []
+
+/**
+ * 二叉树前序遍历
+ * @param node tree node
+ */
+function preOrderTraverse(node: ITreeNode | null) {
+    if (node == null) return
+    // console.log(node.value)
+    arr.push(node.value)
+    preOrderTraverse(node.left)
+    preOrderTraverse(node.right)
+}
+
+/**
+ * 二叉树中序遍历
+ * @param node tree node
+ */
+function inOrderTraverse(node: ITreeNode | null) {
+    if (node == null) return
+    inOrderTraverse(node.left)
+    // console.log(node.value)
+    arr.push(node.value)
+    inOrderTraverse(node.right)
+}
+
+/**
+ * 二叉树后序遍历
+ * @param node tree node
+ */
+function postOrderTraverse(node: ITreeNode | null) {
+    if (node == null) return
+    postOrderTraverse(node.left)
+    postOrderTraverse(node.right)
+    // console.log(node.value)
+    arr.push(node.value)
+}
+
+/**
+ * 寻找 BST 里的第 K 小值
+ * @param node tree node
+ * @param k 第几个值
+ */
+export function getKthValue(node: ITreeNode, k: number): number | null {
+    inOrderTraverse(node)
+    return arr[k - 1] || null
+}
+// 构建二叉树（图形为上面的）
+const bst: ITreeNode = {
+    value: 5,
+    left: {
+        value: 3,
+        left: {
+            value: 2,
+            left: null,
+            right: null
+        },
+        right: {
+            value: 4,
+            left: null,
+            right: null,
+        }
+    },
+    right: {
+        value: 7,
+        left: {
+            value: 6,
+            left: null,
+            right: null
+        },
+        right: {
+            value: 8,
+            left: null,
+            right: null
+        }
+    }
+}
+
+// preOrderTraverse(bst)
+// inOrderTraverse(bst)
+// postOrderTraverse(bst)
+
+console.log(getKthValue(bst, 3))
+```
+
+- 单元测试
+
+```typescript
+import { ITreeNode, getKthValue } from './binary-search-tree'
+
+describe('二叉搜索树', () => {
+    const bst: ITreeNode = {
+        value: 5,
+        left: {
+            value: 3,
+            left: {
+                value: 2,
+                left: null,
+                right: null
+            },
+            right: {
+                value: 4,
+                left: null,
+                right: null,
+            }
+        },
+        right: {
+            value: 7,
+            left: {
+                value: 6,
+                left: null,
+                right: null
+            },
+            right: {
+                value: 8,
+                left: null,
+                right: null
+            }
+        }
+    }
+
+    it('正常情况', () => {
+        const res = getKthValue(bst, 3)
+        expect(res).toBe(4)
+    })
+
+    it('k 不再正常范围之内', () => {
+        const res1 = getKthValue(bst, 0)
+        expect(res1).toBeNull()
+
+        const res2 = getKthValue(bst, 1000)
+        expect(res2).toBeNull()
+    })
+})
 ```
 
 ## 8.7总结
 
-- 二叉搜索树的特点
+- 二叉搜索树的特点:left<=root;right>=root
+- 二叉搜索树的价值：可使用二分法进行快速查找
 - 前序、中序、后序遍历
 
 # 9.为何二叉树重要
@@ -1125,8 +1263,7 @@ interface ITreeNode {
 
 ## 9.2分析
 
-树是常见的数据结构，如 DOM 树，是一种多叉树。<br>
-其中二叉树是一个特别的存在，很重要，很常考。
+树是常见的数据结构，如 DOM 树，是一种多叉树。其中二叉树是一个特别的存在，很重要，很常考。
 
 【注意】本文涉及很多数据结构的知识，所以要“不求甚解” —— 掌握要点和结果，不求细节和过程
 
@@ -1134,8 +1271,8 @@ interface ITreeNode {
 
 有序结构
 
-- 数组：查找易，增删难
-- 链表：增删易，查找难
+- 数组：查找快O(1)，增删慢O(n)
+- 链表：增删快O(1)，查找慢O(n)
 
 将两者优点结合起来 —— 二叉搜索树 BST ：查找易，增删易 —— 可使用二分算法
 
@@ -1148,8 +1285,7 @@ interface ITreeNode {
 
 ## 9.4高级二叉树
 
-二叉搜索树 BST ，如果左右不平衡，也无法做到最优。<br>
-极端情况下，它就成了链表 —— 这不是我们想要的。
+二叉搜索树 BST ，如果左右不平衡，也无法做到最优。极端情况下，它就成了链表 —— 这不是我们想要的。
 
 平衡二叉搜索树 BBST ：要求树左右尽量平衡
 
@@ -1180,6 +1316,8 @@ JS 执行时代码中的变量
 
 - 节点的值，总是不大于（或不小于）其父节点的值
 - 完全二叉树
+- 最大堆：父节点>=子节点
+- 最小堆：父节点<=子节点
 
 ![image-20220729114705050](img/image-20220729114705050.png)
 
@@ -1213,13 +1351,13 @@ const rightIndex = 2 * i + 1
 - 物理结构是数组（空间更小），逻辑结构是二叉树（操作更快）
 - 适用于“堆栈”结构
 
-## 答案
+## 9.6答案
 
 - 二叉树，可以充分利用二分法
 - 二叉树可以同时规避数字和链表的缺点
 - 引申到 BST BBST 等其他扩展结构
 
-## 划重点
+## 9.7划重点
 
 - 二分法的神奇力量
 - 各个高级数据结构的存在价值、设计初衷
@@ -1227,11 +1365,11 @@ const rightIndex = 2 * i + 1
 
 # 10.斐波那契数列
 
-## 题目
+## 10.1题目
 
 用 Javascript 计算第 n 个斐波那契数列的值，注意时间复杂度。
 
-## 分析
+## 10.2分析
 
 斐波那契数列很好理解
 
@@ -1239,39 +1377,96 @@ const rightIndex = 2 * i + 1
 - `f(1) = 1`
 - `f(n) = f(n - 1) + f(n - 2)` 前两个值的和
 
-## 递归计算
+## 10.3递归计算
 
-但这种方式会导致很多重复计算。<br>
-时间复杂度是 `O(2^n)` ，爆炸式增长，不可用。（可以试试 `n: 100` ，程序会卡死）
+但这种方式会导致很多重复计算。时间复杂度是 `O(2^n)` ，爆炸式增长，不可用。（可以试试 `n: 100` ，程序会卡死）
 
 ![](img/斐波那契数列.png)
 
-## 优化
+## 10.4优化
 
 不用递归，用循环，记录中间结果。时间复杂度降低到 `O(n)`
 
-## 动态规划
+## 10.5动态规划
 
 即，把一个大问题，拆解为不同的小问题，递归向下。
 
 【注意】一般使用动态规划的思路（递归）分析问题，再转换为循环来解决问题。
 
-## 三大算法思维
+## 10.6三大算法思维
 
 - 贪心（递归）
 - 二分
 - 动态规划
 
-## 答案
+## 10.7代码实现
 
-使用循环的方式，参考 fibonacci.ts
+```typescript
+/**
+ * 斐波那契数列（递归）
+ * @param n n
+ */
+function fibonacci1(n: number): number {
+    if (n <= 0) return 0
+    if (n === 1) return 1
 
-## 划重点
+    return fibonacci(n - 1) + fibonacci(n - 2)
+}
+
+/**
+ * 斐波那契数列（循环）
+ * @param n n
+ */
+export function fibonacci(n: number): number {
+    if (n <= 0) return 0
+    if (n === 1) return 1
+
+    let n1 = 1 // 记录 n-1 的结果
+    let n2 = 0 // 记录 n-2 的结果
+    let res = 0
+
+    for (let i = 2; i <= n; i++) {
+        res = n1 + n2
+
+        // 记录中间结果
+        n2 = n1
+        n1 = res
+    }
+
+    return res
+}
+
+// 功能测试
+// console.log(fibonacci(10))
+```
+
+- 单元测试
+
+```typescript
+import { fibonacci } from './fibonacci'
+
+describe('斐波那契数列', () => {
+    it('0 和 1', () => {
+        expect(fibonacci(0)).toBe(0)
+        expect(fibonacci(1)).toBe(1)
+    })
+    it('正常情况', () => {
+        expect(fibonacci(2)).toBe(1)
+        expect(fibonacci(3)).toBe(2)
+        expect(fibonacci(6)).toBe(8)
+    })
+    it('n 小于 0', () => {
+        expect(fibonacci(-1)).toBe(0)
+    })
+})
+```
+
+## 10.8结论
 
 - 动态规划的思路
 - 识别出时间复杂度
 
-## 扩展
+## 10.9扩展
 
 青蛙跳台阶：一只青蛙，一次可以跳 1 个台阶，也可以跳 2 个台阶，问该青蛙跳上 n 级台阶，总共有多少种方式？
 
@@ -1288,15 +1483,15 @@ const rightIndex = 2 * i + 1
 
 # 11.移动 0
 
-## 题目
+## 11.1题目
 
 定义一个函数，将数组种所有的 `0` 都移动到末尾，例如输入 `[1, 0, 3, 0, 11, 0]` 输出 `[1, 3, 11, 0, 0, 0]`。要求：
 
 - 只移动 `0` ，其他数字顺序不变
 - 考虑时间复杂度
-- 必须在原数组就行操作
+- 必须在原数组进行操作
 
-## 如果不限制“必须在原数组修改”
+## 11.2如果不限制“必须在原数组修改”
 
 - 定义 `part1` `part2` 两个空数组
 - 遍历数组，非 `0` push 到 `part1` ，`0` push 到 `part2`
@@ -1306,7 +1501,7 @@ const rightIndex = 2 * i + 1
 
 所以，遇到类似问题，要提前问面试官：**是否能在原数组基础上修改？**
 
-## 传统方式
+## 11.3传统方式
 
 思路
 
@@ -1324,13 +1519,13 @@ const rightIndex = 2 * i + 1
 
 【注意】网上有很多人对这种方式点赞，切不可随意从众，要对思考！
 
-## 双指针
+## 11.4双指针
 
-思路（可画图解释，参考视频讲解）
+- 定义j指向第一个0，i指向j后面的第一个非0。
+- 交换i和j的值，继续向后移动。
+- 只遍历一次，所以时间复杂度是O(n)
 
-- 指针1 指向第一个 0 ，指针2 指向第一个非 0
-- 把指针1 和 指针2 进行交换
-- 指针向后移
+![image-20220730184415462](./img/image-20220730184415462.png)
 
 性能分析
 
@@ -1339,12 +1534,410 @@ const rightIndex = 2 * i + 1
 
 性能测试，实际对比差距非常大。
 
-## 答案
+## 11.5答案
 
-使用双指针，保证时间复杂度。参考 move-zero.ts
+使用双指针，保证时间复杂度。
 
-## 划重点
+```typescript
+/**
+ * 移动 0 到数组的末尾（嵌套循环）
+ * @param arr number arr
+ */
+export function moveZero1(arr: number[]): void {
+    const length = arr.length
+    if (length === 0) return
+
+    let zeroLength = 0
+
+    // O(n^2)
+    for (let i = 0; i < length - zeroLength; i++) {
+        if (arr[i] === 0) {
+            arr.push(0)
+            arr.splice(i, 1) // 本身就有 O(n)
+            i-- // 数组截取了一个元素，i 要递减，否则连续 0 就会有错误
+            zeroLength++ // 累加 0 的长度
+        }
+    }
+}
+
+/**
+ * 移动 0 到数组末尾（双指针）
+ * @param arr number arr
+ */
+export function moveZero2(arr: number[]): void {
+    const length = arr.length
+    if (length === 0) return
+
+    let i
+    let j = -1 // 指向第一个 0
+
+    for (i = 0; i < length; i++) {
+        if (arr[i] === 0) {
+            // 第一个 0
+            if (j < 0) {
+                j = i
+            }
+        }
+
+        if (arr[i] !== 0 && j >= 0) {
+            // 交换
+            const n = arr[i]
+            arr[i] = arr[j]
+            arr[j] = n
+
+            j++
+        }
+    }
+}
+
+// // 功能测试
+// const arr = [1, 0, 3, 4, 0, 0, 11, 0]
+// moveZero2(arr)
+// console.log(arr)
+
+// const arr1 = []
+// for (let i = 0; i < 20 * 10000; i++) {
+//     if (i % 10 === 0) {
+//         arr1.push(0)
+//     } else {
+//         arr1.push(i)
+//     }
+// }
+// console.time('moveZero1')
+// moveZero1(arr1)
+// console.timeEnd('moveZero1') // 262ms
+
+// const arr2 = []
+// for (let i = 0; i < 20 * 10000; i++) {
+//     if (i % 10 === 0) {
+//         arr2.push(0)
+//     } else {
+//         arr2.push(i)
+//     }
+// }
+// console.time('moveZero2')
+// moveZero2(arr2)
+// console.timeEnd('moveZero2') // 3ms
+```
+
+- 单元测试
+
+```typescript
+import { moveZero1, moveZero2 } from './move-zero'
+
+describe('移动 0 到数组末尾', () => {
+    it('正常情况', () => {
+        const arr = [1, 0, 3, 4, 0, 0, 0, 11, 0]
+        moveZero2(arr)
+        expect(arr).toEqual([1, 3, 4, 11, 0, 0, 0, 0, 0])
+    })
+    it('没有 0', () => {
+        const arr = [1, 3, 4, 11]
+        moveZero2(arr)
+        expect(arr).toEqual([1, 3, 4, 11])
+    })
+    it('全是 0', () => {
+        const arr = [0, 0, 0, 0, 0]
+        moveZero2(arr)
+        expect(arr).toEqual([0, 0, 0, 0, 0])
+    })
+})
+```
+
+## 11.6结论
 
 - 咨询面试官，确认是否必须要修改原数据？
 - 数组是有序结构，不能随意 `splice` `unshift`
 - 双指针的思路
+
+# 12.连续最多的字符
+
+## 12.1题目
+
+给一个字符串，找出连续最多的字符，以及次数。例如字符串 `'aabbcccddeeee11223'` 连续最多的是 `e` ，4 次。
+
+## 12.2传统方式
+
+嵌套循环，找出每个字符的连续次数，并记录比较。
+
+时间复杂度看似是 `O(n^2)`，因为是嵌套循环。 **但实际上它的时间复杂度是 `O(n)`，因为循环中有跳转**。
+
+## 12.3双指针
+
+画图解释，参考视频讲解。
+
+只有一次循环，时间复杂度是 `O(n)`
+
+性能测试，发现两者时间消耗一样，**循环次数也一样**。
+
+## 12.4其他方式
+
+这个题目网上还有其他的答案
+
+- 正则表达式 —— 正则表达式的效率非常低，可进行性能测试（代码 `x-reg.ts` ）
+- 使用数组累计各个字符串的长度，然后求出最大值 —— 增加空间复杂度，面试官不会喜欢
+
+【注意】算法尽量用基础代码实现，尽量不要用现成的 API 或语法糖 —— 方便，但你不好直观判断时间复杂度
+
+## 12.5答案
+
+上述两种方式（嵌套循环和双指针）都可以，参考 continuous-char.ts
+
+```typescript
+```
+
+
+
+## 12.6结论
+
+- 注意实际的时间复杂度，不要被代码所迷惑
+- 双指针的思路（常用于解决嵌套循环）
+
+# 13.快速排序
+
+## 13.1题目
+
+用 Javascript 实现快速排序，并说明时间复杂度。
+
+## 13.2思路
+
+快速排序是基础算法之一，算法思路是固定的
+
+- 找到中间位置 midValue
+- 遍历数组，小于 midValue 放在 left ，大于 midValue 放在 right
+- 继续递归，concat 拼接
+
+## 13.3splice 和 slice
+
+代码实现时，获取 midValue 可以通过 `splice` 和 `slice` 两种方式
+
+理论分析，`slice` 要优于 `splice` ，因为 `splice` 会修改原数组。<br>
+但实际性能测试发现两者接近。
+
+但是，即便如此还是倾向于选择 `slice` —— **因为它不会改动原数组**，类似于函数式编程
+
+## 13.4性能分析
+
+快速排序 时间复杂度 `O(n*logn)` —— 有遍历，有二分
+
+普通的排序算法（如冒泡排序）时间复杂度时 `O(n^2)`
+
+## 13.5答案
+
+使用 slice 方案，参考 quick-sort.ts
+
+## 13.6划重点
+
+- 排序算法（基本功）
+- 二分法的时间复杂度
+- 注意数组的操作（ `splice` vs `slice` ）
+
+# 14.1-10000 之间的对称数（回文）
+
+## 14.1题目
+
+打印 1-10000 之间的对称数
+
+## 14.2使用数组反转
+
+- 数字转换为字符串
+- 字符串转换为数组 reverse ，再 join 生成字符串
+- 比较前后的字符串
+
+## 14.3使用字符串头尾比较
+
+- 数字转换为字符串
+- 字符串头尾比较
+
+还可以使用**栈**（但栈会用到数组，性能不如直接操作字符串）
+
+- 数字转换为字符串，求长度
+- 如果长度是偶数，则用栈比较
+- 如果长度是奇数，则忽略中间的数字，其他的用栈比较
+
+## 14.4生成反转数
+
+- 通过 `%` 和 `Math.floor` 将数字生成一个反转数
+- 比较前后的数字
+
+## 14.5性能分析
+
+时间复杂度看似相当，都是 `O(n)`
+
+但 方案1 涉及到了数组的转换和操作，就需要耗费大量的时间
+
+- 数组 reverse 需要时间
+- 数组和字符串的转换需要时间
+
+方案 2 3 比较，数字操作最快。电脑的原型就是计算器，所以处理数字是最快的。
+
+## 14.6答案
+
+第三种方案，参考 palindrome-number.ts
+
+## 14.7划重点
+
+- 尽量不要使用内置 API ，不好判断时间复杂度
+- 尽量不要转换数据格式，尤其注意数组（有序结构，不能乱来～）
+- 数字操作最快
+
+# 15.搜索单词
+
+字符串前缀匹配
+
+## 15.1题目
+
+请描述算法思路，不要求写出代码。
+
+- 先给一个英文单词库（数组），里面有几十万个英文单词
+- 再给一个输入框，输入字母，搜索单词
+- 输入英文字母，要实时给出搜索结果，按前缀匹配
+
+要求
+
+- 尽量快
+- 不要使用防抖（输入过程中就及时识别）
+
+## 15.2常规思路
+
+`keyup` 之后，拿当前的单词，遍历词库数组，通过 `indexOf` 来前缀匹配。
+
+性能分析
+
+- 算法思路的时间复杂度是 `O(n)`
+- 外加 `indexOf` 也需要时间复杂度。实际的复杂度要超过 `O(n)`
+
+## 15.3优化数据结构
+
+英文字母一共 26 个，可按照第一个字母分组，分为 26 组。这样搜索次数就减少很多。
+
+可按照第一个字母分组，那也可以按照第二个、第三个字母分组。<br>
+即，在程序初始化时，把数组变成一个树，然后按照字母顺序在树中查找。
+
+```js
+const arr = [
+    'abs',
+    'arab',
+    'array',
+    'arrow',
+    'boot',
+    'boss',
+    // 更多...
+]
+
+const obj = {
+    a: {
+        b: {
+            s: {}
+        },
+        r: {
+            a: {
+                b: {}
+            },
+            r: {
+                a: {
+                    y: {}
+                },
+                o: {
+                    w: {}
+                }
+            }
+        }
+    },
+    b: {
+        o: {
+            o: {
+                t: {}
+            },
+            s: {
+                s: {}
+            }
+        }
+    },
+    // 更多...
+}
+```
+
+这样时间复杂度就大幅度减少，从 `O(n)` 降低到 `O(m)` （`m` 是单词的最大长度）
+
+## 15.4划重点
+
+- 对于已经明确的范围的数据，可以考虑使用哈希表
+- 以空间换时间
+
+# 16.数字千分位
+
+## 16.1题目
+
+将数字按照千分位生成字符串，即每三位加一个逗号。不考虑小数。<br>
+如输入数字 `78100200300` 返回字符串 `'78,100,200,300'`
+
+## 16.2分析
+
+- 使用数组
+- 使用正则表达式
+- 使用字符串拆分
+
+## 16.3性能分析
+
+- 数组转换，影响性能
+- 正则表达式，性能较差
+- 操作字符串，性能较好
+
+## 16.4答案
+
+方案二，参考 thousands-format.ts
+
+## 16.5划重点
+
+- 从尾向头计算，和日常遍历的顺序相反
+- 慎用数组操作
+- 慎用正则表达式
+
+# 17.切换字母大小写
+
+## 17.1题目
+
+切换字母大小写，输入 `'aBc'` 输出 `'AbC'`
+
+## 17.2分析
+
+需要判断字母是大写还是小写
+
+- 正则表达式
+- `charCodeAt` 获取 ASCII 码（ASCII 码表，可以网上搜索）
+
+性能分析
+
+- 正则表达式性能较差
+- ASCII 码性能较好
+
+## 17.3答案
+
+使用 `charCodeAt` ，参考代码 switch-case.ts
+
+## 17.4划重点
+
+- 慎用正则表达式
+- ASCII 码
+
+# 18.小数相加
+
+## 18.1题目
+
+为何 `0.1 + 0.2 !== 0.3`
+
+## 18.2答案
+
+计算机用二进制存储数据。
+
+整数用二进制没有误差，如 `9` 表示为 `1001` 。<br>
+而有的小数无法用二进制表示，如 `0.2` 用二进制表示就是 `1.10011001100...`
+
+所以，累加小数时会出现误差。<br>
+这不仅仅是 JS ，所有的计算机语言都这样。
+
+## 18.3扩展
+
+可以使用第三方库 https://www.npmjs.com/package/mathjs
+
