--- a/面试/100道前端优质面试题/1.数据结构和算法.md
+++ b/面试/100道前端优质面试题/1.数据结构和算法.md
@@ -1664,9 +1664,11 @@ describe('移动 0 到数组末尾', () => {
 
 ## 12.3双指针
 
-画图解释，参考视频讲解。
+- 定义指针i和j，j不动，i继续移动。
+- 如果i和j的值一直相等，则i继续移动。
+- 直到i和j的值不相等，记录处理，让j追上i。继续第一步。
 
-只有一次循环，时间复杂度是 `O(n)`
+只有一次循环，时间复杂度是 `O(n)`。
 
 性能测试，发现两者时间消耗一样，**循环次数也一样**。
 
@@ -1677,16 +1679,148 @@ describe('移动 0 到数组末尾', () => {
 - 正则表达式 —— 正则表达式的效率非常低，可进行性能测试（代码 `x-reg.ts` ）
 - 使用数组累计各个字符串的长度，然后求出最大值 —— 增加空间复杂度，面试官不会喜欢
 
-【注意】算法尽量用基础代码实现，尽量不要用现成的 API 或语法糖 —— 方便，但你不好直观判断时间复杂度
+> 【注意】算法尽量用基础代码实现，尽量不要用现成的 API 或语法糖 —— 方便，但你不好直观判断时间复杂度
 
 ## 12.5答案
 
-上述两种方式（嵌套循环和双指针）都可以，参考 continuous-char.ts
+上述两种方式（嵌套循环和双指针）都可以
 
 ```typescript
+// continuous-char.ts
+interface IRes {
+    char: string
+    length: number
+}
+
+/**
+ * 求连续最多的字符和次数（嵌套循环）
+ * @param str str
+ */
+export function findContinuousChar1(str: string): IRes {
+    const res: IRes = {
+        char: '',
+        length: 0
+    }
+
+    const length = str.length
+    if (length === 0) return res
+
+    let tempLength = 0 // 临时记录当前连续字符的长度
+aabbcccddeeee11223
+    // O(n)
+    for (let i = 0; i < length; i++) {
+        tempLength = 0 // 重置
+
+        for (let j = i; j < length; j++) {
+            if (str[i] === str[j]) {
+                tempLength++
+            }
+
+            if (str[i] !== str[j] || j === length - 1) {
+                // 不相等，或者已经到了最后一个元素。要去判断最大值
+                if (tempLength > res.length) {
+                    res.char = str[i]
+                    res.length = tempLength
+                }
+
+                if (i < length - 1) {
+                    i = j - 1 // 跳步
+                }
+
+                break
+            }
+        }
+    }
+
+    return res
+}
+
+/**
+ * 求连续最多的字符和次数（双指针）
+ * @param str str
+ */
+export function findContinuousChar2(str: string): IRes {
+    const res: IRes = {
+        char: '',
+        length: 0
+    }
+
+    const length = str.length
+    if (length === 0) return res
+
+    let tempLength = 0 // 临时记录当前连续字符的长度
+    let i = 0
+    let j = 0
+
+    // O(n)
+    for (; i < length; i++) {
+        if (str[i] === str[j]) {
+            tempLength++
+        }
+
+        if (str[i] !== str[j] || i === length - 1) {
+            // 不相等，或者 i 到了字符串的末尾
+            if (tempLength > res.length) {
+                res.char = str[j]
+                res.length = tempLength
+            }
+            tempLength = 0 // reset
+
+            if (i < length - 1) {
+                j = i // 让 j “追上” i
+                i-- // 细节：因为循环有i++
+            }
+        }
+    }
+
+    return res
+ }
+
+// // 功能测试
+// const str = 'aabbcccddeeee11223'
+// console.info(findContinuousChar2(str))
+
+// let str = ''
+// for (let i = 0; i < 100 * 10000; i++) {
+//     str += i.toString()
+// }
+
+// console.time('findContinuousChar1')
+// findContinuousChar1(str)
+// console.timeEnd('findContinuousChar1') // 219ms
+
+// console.time('findContinuousChar2')
+// findContinuousChar2(str)
+// console.timeEnd('findContinuousChar2') // 228ms
 ```
 
+- 单元测试
 
+```typescript
+import { findContinuousChar1, findContinuousChar2 } from './continuous-char'
+
+describe('连续字符和长度', () => {
+    it('正常情况', () => {
+        const str = 'aabbcccddeeee11223'
+        const res = findContinuousChar1(str)
+        expect(res).toEqual({ char: 'e', length: 4 })
+    })
+    it('空字符串', () => {
+        const res = findContinuousChar1('')
+        expect(res).toEqual({ char: '', length: 0 })
+    })
+    it('无连续字符', () => {
+        const str = 'abc'
+        const res = findContinuousChar1(str)
+        expect(res).toEqual({ char: 'a', length: 1 })
+    })
+    it('全部都是连续字符', () => {
+        const str = 'aaa'
+        const res = findContinuousChar1(str)
+        expect(res).toEqual({ char: 'a', length: 3 })
+    })
+})
+```
 
 ## 12.6结论
 
@@ -1701,7 +1835,7 @@ describe('移动 0 到数组末尾', () => {
 
 ## 13.2思路
 
-快速排序是基础算法之一，算法思路是固定的
+快速排序是基础算法之一，算法思路是固定的。
 
 - 找到中间位置 midValue
 - 遍历数组，小于 midValue 放在 left ，大于 midValue 放在 right
@@ -1711,32 +1845,164 @@ describe('移动 0 到数组末尾', () => {
 
 代码实现时，获取 midValue 可以通过 `splice` 和 `slice` 两种方式
 
-理论分析，`slice` 要优于 `splice` ，因为 `splice` 会修改原数组。<br>
-但实际性能测试发现两者接近。
+理论分析，`slice` 要优于 `splice` ，因为 `splice` 会修改原数组。但实际性能测试发现两者接近。
 
 但是，即便如此还是倾向于选择 `slice` —— **因为它不会改动原数组**，类似于函数式编程
 
 ## 13.4性能分析
 
-快速排序 时间复杂度 `O(n*logn)` —— 有遍历，有二分
+快速排序时间复杂度 `O(n*logn)` —— 有遍历，有二分
 
 普通的排序算法（如冒泡排序）时间复杂度时 `O(n^2)`
 
 ## 13.5答案
 
-使用 slice 方案，参考 quick-sort.ts
+使用 slice 方案。
 
-## 13.6划重点
+```typescript
+// quick-sort.ts
+/**
+ * 快速排序（使用 splice）
+ * @param arr number arr
+ */
+export function quickSort1(arr: number[]): number[] {
+    const length = arr.length
+    if (length === 0) return arr
+
+    const midIndex = Math.floor(length / 2)
+    const midValue = arr.splice(midIndex, 1)[0]
+
+    const left: number[] = []
+    const right: number[] = []
+
+    // 注意：这里不用直接用 length ，而是用 arr.length 。因为 arr 已经被 splice 给修改了
+    for (let i = 0; i < arr.length; i++) {
+        const n = arr[i]
+        if (n < midValue) {
+            // 小于 midValue ，则放在 left
+            left.push(n)
+        } else {
+            // 大于 midValue ，则放在 right
+            right.push(n)
+        }
+    }
+
+    return quickSort1(left).concat(
+        [midValue],
+        quickSort1(right)
+    )
+}
+
+/**
+ * 快速排序（使用 slice）
+ * @param arr number arr
+ */
+export function quickSort2(arr: number[]): number[] {
+    const length = arr.length
+    if (length === 0) return arr
+
+    const midIndex = Math.floor(length / 2)
+    const midValue = arr.slice(midIndex, midIndex + 1)[0]
+
+    const left: number[] = []
+    const right: number[] = []
+		// O(n) * O(logn)==O(nlogn)
+    for (let i = 0; i < length; i++) {
+        if (i !== midIndex) {
+            const n = arr[i]
+            if (n < midValue) {
+                // 小于 midValue ，则放在 left
+                left.push(n)
+            } else {
+                // 大于 midValue ，则放在 right
+                right.push(n)
+            }
+        }
+    }
+
+    return quickSort2(left).concat(
+        [midValue],
+        quickSort2(right)
+    )
+}
+
+// // 功能测试
+// const arr1 = [1, 6, 2, 7, 3, 8, 4, 9, 5]
+// console.info(quickSort2(arr1))
+
+// // 性能测试
+// const arr1 = []
+// for (let i = 0; i < 10 * 10000; i++) {
+//     arr1.push(Math.floor(Math.random() * 1000))
+// }
+// console.time('quickSort1')
+// quickSort1(arr1)
+// console.timeEnd('quickSort1') // 74ms
+
+// const arr2 = []
+// for (let i = 0; i < 10 * 10000; i++) {
+//     arr2.push(Math.floor(Math.random() * 1000))
+// }
+// console.time('quickSort2')
+// quickSort2(arr2)
+// console.timeEnd('quickSort2') // 82ms
+
+// // 单独比较 splice 和 slice
+// const arr1 = []
+// for (let i = 0; i < 10 * 10000; i++) {
+//     arr1.push(Math.floor(Math.random() * 1000))
+// }
+// console.time('splice')
+// arr1.splice(5 * 10000, 1)
+// console.timeEnd('splice')
+// const arr2 = []
+// for (let i = 0; i < 10 * 10000; i++) {
+//     arr2.push(Math.floor(Math.random() * 1000))
+// }
+// console.time('slice')
+// arr2.slice(5 * 10000, 5 * 10000 + 1)
+// console.timeEnd('slice')
+```
+
+- 单元测试
+
+```typescript
+import { quickSort1, quickSort2 } from './quick-sort'
+
+describe('快速排序', () => {
+    it('正常情况', () => {
+        const arr = [1, 6, 2, 7, 3, 8, 4, 9, 5]
+        const res = quickSort2(arr)
+        expect(res).toEqual([1, 2, 3, 4, 5, 6, 7, 8, 9])
+    })
+    it('有负数', () => {
+        const arr = [-2, 2, -3, 1]
+        const res = quickSort2(arr)
+        expect(res).toEqual([-3, -2, 1, 2])
+    })
+    it('数组元素都一样', () => {
+        const arr = [2, 2, 2, 2]
+        const res = quickSort2(arr)
+        expect(res).toEqual([2, 2, 2, 2])
+    })
+    it('空数组', () => {
+        const res = quickSort2([])
+        expect(res).toEqual([])
+    })
+})
+```
+
+## 13.6结论
 
 - 排序算法（基本功）
 - 二分法的时间复杂度
 - 注意数组的操作（ `splice` vs `slice` ）
 
-# 14.1-10000 之间的对称数（回文）
+# 14.求1-10000 之间的所有对称数（回文）
 
 ## 14.1题目
 
-打印 1-10000 之间的对称数
+打印 1-10000 之间的对称数。
 
 ## 14.2使用数组反转
 
@@ -1773,7 +2039,118 @@ describe('移动 0 到数组末尾', () => {
 
 ## 14.6答案
 
-第三种方案，参考 palindrome-number.ts
+```typescript
+// palindrome-number.ts
+/**
+ * 查询 1-max 的所有对称数（数组反转）
+ * @param max 最大值
+ */
+export function findPalindromeNumbers1(max: number): number[] {
+    const res: number[] = []
+    if (max <= 0) return res
+
+    for (let i = 1; i <= max; i++) {
+        // 转换为字符串，转换为数组，再反转，比较
+        const s = i.toString()
+        if (s === s.split('').reverse().join('')) {
+            res.push(i)
+        }
+    }
+
+    return res
+}
+
+/**
+ * 查询 1-max 的所有对称数（字符串前后比较）
+ * @param max 最大值
+ */
+export function findPalindromeNumbers2(max: number): number[] {
+    const res: number[] = []
+    if (max <= 0) return res
+
+    for (let i = 1; i <= max; i++) {
+        const s = i.toString()
+        const length = s.length
+
+        // 字符串头尾比较
+        let flag = true
+        let startIndex = 0 // 字符串开始
+        let endIndex = length - 1 // 字符串结束
+        while (startIndex < endIndex) {
+            if (s[startIndex] !== s[endIndex]) {
+                flag = false
+                break
+            } else {
+                // 继续比较
+                startIndex++
+                endIndex--
+            }
+        }
+
+        if (flag) res.push(i)
+    }
+
+    return res
+}
+
+/**
+ * 查询 1-max 的所有对称数（翻转数字）
+ * @param max 最大值
+ */
+export function findPalindromeNumbers3(max: number): number[] {
+    const res: number[] = []
+    if (max <= 0) return res
+
+    for (let i = 1; i <= max; i++) {
+        let n = i
+        let rev = 0 // 存储翻转数
+
+        // 生成翻转数
+        while (n > 0) {
+            rev = rev * 10 + n % 10
+            n = Math.floor(n / 10)
+        }
+
+        if (i === rev) res.push(i)
+    }
+
+    return res
+}
+
+
+// 功能测试
+// console.info(findPalindromeNumbers3(200))
+
+// 性能测试
+console.time('findPalindromeNumbers1')
+findPalindromeNumbers1(100 * 10000)
+console.timeEnd('findPalindromeNumbers1') // 408ms
+
+console.time('findPalindromeNumbers2')
+findPalindromeNumbers2(100 * 10000)
+console.timeEnd('findPalindromeNumbers2') // 53ms
+
+console.time('findPalindromeNumbers3')
+findPalindromeNumbers3(100 * 10000)
+console.timeEnd('findPalindromeNumbers3') // 42ms
+```
+
+- 单元测试
+
+```typescript
+import { findPalindromeNumbers1, findPalindromeNumbers2, findPalindromeNumbers3 } from './palindrome-number'
+
+describe('对称数', () => {
+    it('正常情况', () => {
+        const numbers = findPalindromeNumbers3(200)
+        expect(numbers.length).toBe(28)
+    })
+    it('max 小于等于 0', () => {
+        const numbers = findPalindromeNumbers3(0)
+        expect(numbers).toEqual([])
+    })
+})
+```
 
 ## 14.7划重点
 
@@ -1811,8 +2188,7 @@ describe('移动 0 到数组末尾', () => {
 
 英文字母一共 26 个，可按照第一个字母分组，分为 26 组。这样搜索次数就减少很多。
 
-可按照第一个字母分组，那也可以按照第二个、第三个字母分组。<br>
-即，在程序初始化时，把数组变成一个树，然后按照字母顺序在树中查找。
+可按照第一个字母分组，那也可以按照第二个、第三个字母分组。即，在程序初始化时，把数组变成一个树，然后按照字母顺序在树中查找。
 
 ```js
 const arr = [
@@ -1862,15 +2238,14 @@ const obj = {
 
 ## 15.4划重点
 
-- 对于已经明确的范围的数据，可以考虑使用哈希表
-- 以空间换时间
+- 对于已经明确的范围的数据，可以考虑使用哈希表。
+- 以空间换时间。
 
 # 16.数字千分位
 
 ## 16.1题目
 
-将数字按照千分位生成字符串，即每三位加一个逗号。不考虑小数。<br>
-如输入数字 `78100200300` 返回字符串 `'78,100,200,300'`
+将数字按照千分位生成字符串，即每三位加一个逗号。不考虑小数。如输入数字 `78100200300` 返回字符串 `'78,100,200,300'`。
 
 ## 16.2分析
 
@@ -1884,11 +2259,83 @@ const obj = {
 - 正则表达式，性能较差
 - 操作字符串，性能较好
 
-## 16.4答案
+## 16.4代码编写
 
-方案二，参考 thousands-format.ts
+```typescript
+/**
+ * 千分位格式化（使用数组）
+ * @param n number
+ */
+export function format1(n: number): string {
+    n = Math.floor(n) // 只考虑整数
 
-## 16.5划重点
+    const s = n.toString()
+    const arr = s.split('').reverse()
+    return arr.reduce((prev, val, index) => {
+        if (index % 3 === 0) {
+            if (prev) {
+                return val + ',' + prev
+            } else {
+                return val
+            }
+        } else {
+            return val + prev
+        }
+    }, '')
+}
+
+/**
+ * 数字千分位格式化（字符串分析）
+ * @param n number
+ */
+export function format2(n: number): string {
+    n = Math.floor(n) // 只考虑整数
+
+    let res = ''
+    const s = n.toString()
+    const length = s.length
+
+    for (let i = length - 1; i >= 0; i--) {
+        const j = length - i
+        if (j % 3 === 0) {
+            if (i === 0) {
+                res = s[i] + res
+            } else {
+                res = ',' + s[i] + res
+            }
+        } else {
+            res = s[i] + res
+        }
+    }
+
+    return res
+}
+
+// // 功能测试
+// const n = 10201004050
+// console.info('format1', format1(n))
+// console.info('format2', format2(n))
+```
+
+- 单元测试
+
+```typescript
+import { format1, format2 } from './thousands-format'
+
+describe('数组千分位格式化', () => {
+    it('正常', () => {
+        const n = 10201004050
+        const res = format2(n)
+        expect(res).toBe('10,201,004,050')
+    })
+    it('小于 1000', () => {
+        expect(format2(0)).toBe('0')
+        expect(format2(10)).toBe('10')
+    })
+})
+```
+
+## 16.5结论
 
 - 从尾向头计算，和日常遍历的顺序相反
 - 慎用数组操作
@@ -1898,7 +2345,7 @@ const obj = {
 
 ## 17.1题目
 
-切换字母大小写，输入 `'aBc'` 输出 `'AbC'`
+切换字母大小写，输入 `'aBc'` 输出 `'AbC'`。
 
 ## 17.2分析
 
@@ -1914,7 +2361,102 @@ const obj = {
 
 ## 17.3答案
 
-使用 `charCodeAt` ，参考代码 switch-case.ts
+使用 `charCodeAt` 。
+
+```typescript
+/**
+ * 切换字母大小写（正则表达式）
+ * @param s str
+ */
+export function switchLetterCase1(s: string): string {
+    let res = ''
+
+    const length = s.length
+    if (length === 0) return res
+
+    const reg1 = /[a-z]/
+    const reg2 = /[A-Z]/
+
+    for (let i = 0; i < length; i++) {
+        const c = s[i]
+        if (reg1.test(c)) {
+            res += c.toUpperCase()
+        } else if (reg2.test(c)) {
+            res += c.toLowerCase()
+        } else {
+            res += c
+        }
+    }
+
+    return res
+}
+
+/**
+ * 切换字母大小写（ASCII 编码）
+ * @param s str
+ */
+export function switchLetterCase2(s: string): string {
+    let res = ''
+
+    const length = s.length
+    if (length === 0) return res
+
+    for (let i = 0; i < length; i++) {
+        const c = s[i]
+        const code = c.charCodeAt(0)
+
+        if (code >= 65 && code <= 90) {
+            res += c.toLowerCase()
+        } else if (code >= 97 && code <= 122) {
+            res += c.toUpperCase()
+        } else {
+            res += c
+        }
+    }
+
+    return res
+}
+
+// // 功能测试
+// const str = '100aBcD$#xYz'
+// console.info(switchLetterCase2(str))
+
+// // 性能测试
+// const str = '100aBcD$#xYz100aBcD$#xYz100aBcD$#xYz100aBcD$#xYz100aBcD$#xYz100aBcD$#xYz'
+// console.time('switchLetterCase1')
+// for (let i = 0; i < 10 * 10000; i++) {
+//     switchLetterCase1(str)
+// }
+// console.timeEnd('switchLetterCase1') // 436ms
+
+// console.time('switchLetterCase2')
+// for (let i = 0; i < 10 * 10000; i++) {
+//     switchLetterCase2(str)
+// }
+// console.timeEnd('switchLetterCase2') // 210ms
+```
+
+- 单元测试
+
+```typescript
+import { switchLetterCase1, switchLetterCase2 } from './switch-letter-case'
+
+describe('切换字母大小写', () => {
+    it('正常', () => {
+        const str = '100aBcD$#xYz'
+        const res = switchLetterCase2(str)
+        expect(res).toBe('100AbCd$#XyZ')
+    })
+    it('空字符串', () => {
+        const res = switchLetterCase2('')
+        expect(res).toBe('')
+    })
+    it('非字母', () => {
+        const res = switchLetterCase2('100$%你好')
+        expect(res).toBe('100$%你好')
+    })
+})
+```
 
 ## 17.4划重点
 
@@ -1931,11 +2473,9 @@ const obj = {
 
 计算机用二进制存储数据。
 
-整数用二进制没有误差，如 `9` 表示为 `1001` 。<br>
-而有的小数无法用二进制表示，如 `0.2` 用二进制表示就是 `1.10011001100...`
+整数用二进制没有误差，如 `9` 表示为 `1001` 。而有的小数无法用二进制表示，如 `0.2` 用二进制表示就是 `1.10011001100...`
 
-所以，累加小数时会出现误差。<br>
-这不仅仅是 JS ，所有的计算机语言都这样。
+所以，累加小数时会出现误差。这不仅仅是 JS ，所有的计算机语言都这样。
 
 ## 18.3扩展
 
